# UC-work

./: README.md
COSC261 Formal Languages and Compilers/Assignment/: compiler.py  ply_parser.py  program
COSC264 Networks/: client.py  server.py
COSC363 Graphics/OpenGL 2/: Museum.cpp  README.md
COSC363 Graphics/OpenGL 2/Textures/: door.tga
COSC363 Graphics/Ray Tracing/: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  TextureBMP.cpp  TextureBMP.h  Torus.cpp  Torus.h  poly34.cpp  poly34.h
COSC364 Internet Technology/Assignment/: README.md  router-1.conf  router-2.conf  router-3.conf  router-4.conf  router-5.conf  router-6.conf  router-7.conf  server.py  test-01.py  tester.py
COSC367 AI/: Graphs.py  bayesnets.py  constraints.py  games.py  kb2.pl  neural_nets.py
COSC368 HCI/: experimental_keyboard.py  fitts_law_ui.py  gui-36.py
ENCE260 Computer Systems/: accelerometer.c  herbert.c  processtemps.c  struct2.c  studlist.txt
ENCE260 Computer Systems/Assignment/: Makefile  README  ball.c  ball.h  communications.c  communications.h  game.c  led_display.c  led_display.h
SENG365 Web Computing/Node.js server/: Dockerfile  package.json
SENG365 Web Computing/Node.js server/config/: db.js  express.js
SENG365 Web Computing/Vue.js site/: README.md  index.html  package.json
SENG365 Web Computing/Vue.js site/src/: App.vue  Edit_Petition.vue  Edit_Profile.vue  My_Petitions.vue  New_Petition.vue  Petition.vue  Petitions.vue  Profile.vue  (+1 more)
(+18 files in other folders)
